--- a/index.html
+++ b/index.html
@@ -70,22 +70,9 @@
       </div>
     </div>
 
-    <!-- AddThis Button BEGIN -->
     <div class="container section-share text-right">
-      <div class="addthis_toolbox addthis_default_style ">
-      <a class="addthis_button_facebook_share" fb:share:layout="button_count"></a>
-      <a class="addthis_button_tweet"></a>
-      <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
-      <a class="addthis_counter addthis_pill_style"></a>
-      </div>
-      <script type="text/javascript">
-      var addthis_config = {"data_track_addressbar":false,"data_track_clickback":false};
-      var addthis_share = {"url":"http://mbtaviz.github.io/","title":"Visualizing MBTA Data","description":"An interactive exploration of Boston's subway system"};
-      </script>
-      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5253f5637952ccec"></script>
-      <iframe src="http://ghbtns.com/github-btn.html?user=mbtaviz&repo=mbtaviz.github.io&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+      <iframe src="https://ghbtns.com/github-btn.html?user=mbtaviz&repo=mbtaviz.github.io&type=star&count=true" frameborder="0" scrolling="0" width="100" height="20" title="GitHub"></iframe>
     </div>
-    <!-- AddThis Button END -->
   </div>
 
   <!-- Intro -->
@@ -505,8 +492,6 @@
   <script src="scripts/the-people.js"></script>
   <script src="scripts/congestion-and-delay.js"></script>
   <script src="scripts/your-commute.js"></script>
-  
-    <script src="//oss.maxcdn.com/signet/0.4.4/signet.min.js"></script>
   
 <!--<![endif]-->
 </body>
