deleted github link and changed the name

--- a/index.html
+++ b/index.html
@@ -62,17 +62,13 @@
           <h1>Visualizing MBTA Data</h1>
           <h2>An interactive exploration of Boston's subway system</h2>
           <p class="authors">
-            Mike Barry and Brian Card - June 10, 2014
+            Steven L Montoya
           </p>
         </div>
         <div class="graphic col-sm-4 pull-right">
         </div>
       </div>
-    </div>
-
-    <div class="container section-share text-right">
-      <iframe src="https://ghbtns.com/github-btn.html?user=mbtaviz&repo=mbtaviz.github.io&type=star&count=true" frameborder="0" scrolling="0" width="100" height="20" title="GitHub"></iframe>
-    </div>
+    </div>  
   </div>
 
   <!-- Intro -->
@@ -389,36 +385,6 @@
         Orange line trips like
         <a href="#" data-start="place-dwnxg" data-end="place-forhl" class="click-link pick-two-choose">Downtown Crossing to Forest Hills</a>
         are less variable in transit time - but trains come much less frequently and reliably.
-      </p>
-    </div>
-  </div>
-
-  <!-- The Conclusion -->
-  <div class="full-width section-conclusion">
-    <div class="container">
-      <h3>
-        <a href="#summary" class="anchor">
-          <span class="glyphicon glyphicon-link"></span>
-        </a>
-        Summary
-      </h3>
-      <p>Through publicly available data, we have the tools to understand the subway system better than we ever have before.  We have seen how the system operates on a daily basis, how people use the system, how that affects the trains and also how this ties back to your daily commute.  To see a live version of this data, check out MBTA Trains for <a href="https://subway.mbtatrains.com" target="_blank">real-time subway delays</a> and <a href="https://mbtatrains.com" target="_blank">real-time commuter rail delays</a>.
-    </div>
-  </div>
-
-  
-  <!-- Source Code -->
-  <div class="full-width section-source-code">
-    <div class="container">
-      <h3>
-        <a href="#source-code" class="anchor">
-          <span class="glyphicon glyphicon-link"></span>
-        </a>
-        Source Code
-      </h3>
-      <p>
-        The source code and raw data are available
-        <a href="https://github.com/coolguy741/D3.js-data-visualization" target="_blank">on github</a>
       </p>
     </div>
   </div>
